--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@ nav.main-nav{display:flex;align-items:center;gap:14px}
 nav.main-nav ul{display:flex;gap:14px;align-items:center;margin:0;padding:0;list-style:none}
 nav.main-nav a{color:white;text-decoration:none;font-weight:600;padding:6px 8px;border-radius:8px}
 
-/* hamburger (always in header right area) */
+/* Desktop toggle helper: when .hidden is present, hide the desktop nav */
+@media (min-width: 641px) {
+  nav.main-nav.hidden {
+    display: none !important;
+  }
+}
+
+/* hamburger - hidden on desktop, visible on mobile */
 .hamburger {
   background: transparent;
   border: 0;
@@ -54,8 +61,16 @@ nav.main-nav a{color:white;text-decoration:none;font-weight:600;padding:6px 8px;
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
+  display: none; /* hide by default (desktop) */
 }
 .hamburger:focus { outline:3px solid rgba(255,255,255,0.16); outline-offset:2px }
+
+/* show hamburger only on small screens */
+@media (max-width: 640px) {
+  .hamburger { display: block; }
+  /* and hide desktop nav on mobile */
+  nav.main-nav { display: none; }
+}
 
 /* Mobile overlay + panel (panel will slide in FROM LEFT) */
 .mobile-overlay {
@@ -141,8 +156,6 @@ footer{margin-top:18px;padding:12px 0;color:var(--muted)}
   .banner-card img{height:220px}
 }
 @media (max-width: 640px){
-  /* hide desktop nav on phone */
-  nav.main-nav{display:none}
   .products-grid{grid-template-columns:1fr;gap:10px}
   .card .actions{flex-direction:column}
   .btn, .wa-btn, .btn-outline{width:100%}
@@ -174,8 +187,8 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         </ul>
       </nav>
 
-      <!-- HAMBURGER RIGHT -->
-      <button class="hamburger" id="menuBtn" aria-label="Menu">☰</button>
+      <!-- HAMBURGER (only visible on phone) -->
+      <button class="hamburger" id="menuBtn" aria-label="Menu" aria-expanded="false">☰</button>
     </div>
   </header>
 
@@ -213,44 +226,44 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
       <div class="products-grid" role="list">
         <article class="card" role="listitem">
           <div class="image-frame"><img src="product 1.png" alt="Day Pads"></div>
-          <h3>Day Pads — Regular</h3>
-          <div class="price">₹149 / pack</div>
+          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
+          <div class="price">₹250 / 10 Pack <br>(per packet 7 peace pads) <br> (Limited Time Offer)</div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹149','product 1.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹250','product 1.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹149">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
           <div class="image-frame"><img src="10 Pack Combo.png" alt="Night Pads"></div>
-          <h3>Night Pads — Extra Length</h3>
-          <div class="price">₹199 / pack</div>
+          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
+          <div class="price">₹250 / 10 Pack <br>(per packet 7 peace pads) <br> (Limited Time Offer)</div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹199','10 Pack Combo.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹250','10 Pack Combo.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹199">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
           <div class="image-frame"><img src="jumbo.png" alt="Organic Pads"></div>
-          <h3>Saheli</h3>
-          <div class="price">₹219 / pack</div>
-          <p style="color:var(--muted)">Made with organic cotton for sensitive skin.</p>
+          <h3>Saheli Care Jumbo Pack sanitary pads</h3>
+          <div class="price">₹350/ 40 Peace (2 free Peace)</div>
+          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹219','jumbo.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹350','jumbo.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹219">Order via WhatsApp</button>
           </div>
         </article>
       </div>
 
-      <!-- Diwali bundle -->
+      <!-- Offer -->
       <div style="margin:12px 0;">
         <div class="diwali-card">
-          <div class="diwali-image"><img src="offer.png" alt="Diwali Offer"></div>
+          <div class="diwali-image"><img src="offer.png" alt="Offer"></div>
           <div>
-            <h3 style="margin:0">Diwali Special — 10 pack</h3>
+            <h3 style="margin:0">New Offer — 10 pack</h3>
             <div style="color:var(--accent);font-weight:800">Only ₹250</div>
           </div>
           <div style="margin-left:auto">
@@ -455,11 +468,12 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
       quickModal.addEventListener('click', (e)=>{ if(e.target === quickModal) closeModal(); });
       document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') { closeModal(); } });
 
-      // --- MOBILE PANEL (slides FROM LEFT) ---
+      // --- MOBILE PANEL (slides FROM LEFT) and DESKTOP toggle (robust) ---
       const menuBtn = document.getElementById('menuBtn');
       const mobilePanel = document.getElementById('mobilePanel');
       const mobileOverlay = document.getElementById('mobileOverlay');
       const closePanelBtn = document.getElementById('closePanelBtn');
+      const desktopNav = document.querySelector('nav.main-nav');
 
       function openMobilePanel(){
         mobilePanel.classList.add('open');
@@ -478,21 +492,35 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
 
       menuBtn && menuBtn.addEventListener('click', (e)=>{
         e.preventDefault();
+
+        // mobile view: open left sliding panel
         if(window.matchMedia && window.matchMedia('(max-width:640px)').matches){
           if(mobilePanel.classList.contains('open')) closeMobilePanel();
           else openMobilePanel();
+          // update aria-expanded for button
+          menuBtn.setAttribute('aria-expanded', String(mobilePanel.classList.contains('open')));
+          return;
+        }
+
+        // DESKTOP: toggle main-nav by adding/removing .hidden (robust vs inline styles)
+        if(desktopNav){
+          desktopNav.classList.toggle('hidden');
+          const expanded = !desktopNav.classList.contains('hidden');
+          menuBtn.setAttribute('aria-expanded', String(expanded));
         } else {
-          // fallback: toggle desktop nav visibility
           const navList = document.getElementById('navList');
-          const shown = navList.style.display === 'flex';
-          navList.style.display = shown ? 'none' : 'flex';
+          if(navList){
+            const shown = getComputedStyle(navList).display !== 'none';
+            navList.style.display = shown ? 'none' : 'flex';
+            menuBtn.setAttribute('aria-expanded', String(!shown));
+          }
         }
       });
 
-      closePanelBtn && closePanelBtn.addEventListener('click', (e)=>{ e.preventDefault(); closeMobilePanel(); });
-      mobileOverlay && mobileOverlay.addEventListener('click', (e)=>{ closeMobilePanel(); });
-      document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') { closeMobilePanel(); } });
-      document.querySelectorAll('.panel-link').forEach(link=>{ link.addEventListener('click', ()=>{ closeMobilePanel(); }); });
+      closePanelBtn && closePanelBtn.addEventListener('click', (e)=>{ e.preventDefault(); closeMobilePanel(); menuBtn.setAttribute('aria-expanded','false'); });
+      mobileOverlay && mobileOverlay.addEventListener('click', (e)=>{ closeMobilePanel(); menuBtn.setAttribute('aria-expanded','false'); });
+      document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') { closeMobilePanel(); desktopNav && desktopNav.classList.remove('hidden'); menuBtn.setAttribute('aria-expanded','false'); } });
+      document.querySelectorAll('.panel-link').forEach(link=>{ link.addEventListener('click', ()=>{ closeMobilePanel(); menuBtn.setAttribute('aria-expanded','false'); }); });
 
       // contact form -> WhatsApp (unchanged)
       const contactForm = document.getElementById('contactForm');
