--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹250','product 1.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹149">Order via WhatsApp</button>
+            <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
 
@@ -242,7 +242,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹250','10 Pack Combo.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹199">Order via WhatsApp</button>
+            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
 
@@ -253,11 +253,92 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
             <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹350','jumbo.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹219">Order via WhatsApp</button>
+            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹350">Order via WhatsApp</button>
           </div>
         </article>
       </div>
+          <section id="products">
+      
+      <div class="products-grid" role="list">
+        <article class="card" role="listitem">
+          <div class="image-frame"><img src="product 22.png" alt="Day Pads"></div>
+          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
+          <div class="price">₹80 / 1 pack<br>( 7 peace pads) <br></div>
+          <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹80','product 22.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹80">Order via WhatsApp</button>
+          </div>
+        </article>
 
+        <article class="card">
+          <div class="image-frame"><img src="product33.png" alt="Night Pads"></div>
+          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
+          <div class="price">₹59 / 1 Pack <br>(7 peace pads) <br></div>
+          <p style="color:var(--muted)">Overnight protection with full coverage.</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹59','product33.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹59">Order via WhatsApp</button>
+          </div>
+        </article>
+
+        <article class="card">
+          <div class="image-frame"><img src="product44.png" alt="Organic Pads"></div>
+          <h3>Saheli Care Magic Gel Pads </h3>
+          <div class="price">₹75/ 1 Pack ( 7 peace)</div>
+          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹75','produc66.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹75">Order via WhatsApp</button>
+          </div>
+        </article>
+      </div>
+      <article class="card">
+          <div class="image-frame"><img src="produc66.png" alt="Organic Pads"></div>
+          <h3>Saheli Care sanitary pads(Protection - Infection & Itching)</h3>
+          <div class="price">₹55/ 1 Pack ( 7 Peace)</div>
+          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹55','produc66.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹55">Order via WhatsApp</button>
+          </div>
+        </article>
+      </div>
+        <br>
+       <article class="card">
+          <div class="image-frame"><img src="pro11.png" alt="Night Pads"></div>
+          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
+          <div class="price">₹85 / (buy 1 Packet Get 1 Packet free)  <br>(Per Packet 7 peace pads) <br></div>
+          <p style="color:var(--muted)">Overnight protection with full coverage.</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹85','product33.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹85">Order via WhatsApp</button>
+          </div>
+        </article>
+          <br>
+        <article class="card">
+          <div class="image-frame"><img src="Buy 1 Get 1 Free.png" alt="Organic Pads"></div>
+          <h3>Saheli Care Magic Gel Pads </h3>
+          <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
+          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','produc66.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
+          </div>
+        </article>
+       <br>
+
+      <article class="card">
+          <div class="image-frame"><img src="Buy 1 Get 1 Free 2.png" alt="Organic Pads"></div>
+          <h3>Saheli Care Magic Gel sanitary pads <br>(Protection - Infection & Itching)</h3>
+          <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
+          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
+          <div class="actions">
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','produc66.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
+          </div>
+        </article>
+      </div>
       <!-- Offer -->
       <div style="margin:12px 0;">
         <div class="diwali-card">
@@ -275,7 +356,10 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
 
     <section id="about" style="margin-top:8px">
       <h2>About Saheli Care</h2>
-      <p style="color:var(--muted)">Saheli Care exists to make menstrual care comfortable, dignified, and accessible. We design products that put your comfort first — backed by safety and quality testing.</p>
+      <p style="color:var(--muted)"><h3>Saheli Care is a modern menstrual hygiene brand committed to providing women with safe, comfortable, and high-quality sanitary products. 
+    Our pads are designed with advanced absorbent layers, soft breathable materials, and superior protection to ensure all-day confidence and comfort. <br> <br>  We ensure top-grade materials, hygienic manufacturing, and eco-friendly packaging — because your safety and sustainability matter to us. 
+    Saheli Care is here to make every period day worry-free and empowering.
+  </p></p>
     </section>
 
     <section id="contact" style="margin-top:12px">
@@ -304,7 +388,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </main>
 
   <footer class="container">
-    <div style="padding:12px 0;color:var(--muted)">
+    <div style="padding:12px 0;color:var(--muted)">   
       <strong>Saheli Care</strong> • © All rights reserved
     </div>
   </footer>
