--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <div class="price">₹75/ 1 Pack ( 7 peace)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹75','produc66.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹75','product44.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹75">Order via WhatsApp</button>
           </div>
         </article>
@@ -311,7 +311,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <div class="price">₹85 / (buy 1 Packet Get 1 Packet free)  <br>(Per Packet 7 peace pads) <br></div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹85','product33.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹85','pro11.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹85">Order via WhatsApp</button>
           </div>
         </article>
@@ -322,7 +322,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','produc66.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','Buy 1 Get 1 Free.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
           </div>
         </article>
@@ -334,7 +334,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','produc66.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','Buy 1 Get 1 Free 2.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
           </div>
         </article>
