--- a/index.html
+++ b/index.html
@@ -306,35 +306,35 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
       <h2 style="margin-top:8px">Popular Products</h2>
       <div class="products-grid" role="list">
         <article class="card" role="listitem">
-          <div class="image-frame"><img src="product 1.png" alt="Day Pads"></div>
-          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
-          <div class="price">₹250 / 10 Pack <br>(per packet 7 peace pads) <br> (Limited Time Offer)</div>
+          <div class="image-frame"><img src="5.png" alt="XL (without chip Try-fold Pad)"></div>
+          <h3>Saheli Care (XL Pads) Try-fold (Soft & Comfortable)</h3>
+          <div class="price">₹250 / 10 Pack <br>(per packet 7 pads) <br> (Limited Time Offer)</div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹250','product 1.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹250">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XL (without chip Try-fold Pad)','₹250','5.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL (without chip Try-fold Pad)" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
-          <div class="image-frame"><img src="10 Pack Combo.png" alt="Night Pads"></div>
-          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
-          <div class="price">₹250 / 10 Pack <br>(per packet 7 peace pads) <br> (Limited Time Offer)</div>
+          <div class="image-frame"><img src="2.png" alt="XL (Anion Chip ,Magic Gel Pads)"></div>
+          <h3>Saheli Care XL Pads (Anion Chip ,Magic Gel Pads) (Soft & Comfortable)</h3>
+          <div class="price">₹350 / 10 Pack <br>(per packet 7 pads) <br> (Limited Time Offer)</div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹250','10 Pack Combo.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹250">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XL (Anion Chip ,Magic Gel Pads)','₹350','2.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL (Anion Chip ,Magic Gel Pads)" data-price="₹350">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
-          <div class="image-frame"><img src="jumbo.png" alt="Organic Pads"></div>
-          <h3>Saheli Care Jumbo Pack sanitary pads</h3>
-          <div class="price">₹350/ 40 Peace (2 free Peace)</div>
+          <div class="image-frame"><img src="new.png" alt="XXL (Without chip Try-fold pads)"></div>
+          <h3>Saheli Care XXL (Without chip Try-fold pads)</h3>
+          <div class="price">₹250/ ( 42+42=84 Pads )</div>
           <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹350','jumbo.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹350">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XXL (Without chip Try-fold pads)','₹250','new.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XXL (Without chip Try-fold pads)" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
       </div>
@@ -342,24 +342,24 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
       
       <div class="products-grid" role="list">
         <article class="card" role="listitem">
-          <div class="image-frame"><img src="product 22.png" alt="Day Pads"></div>
-          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
-          <div class="price">₹80 / 1 pack<br>( 7 peace pads) <br></div>
+          <div class="image-frame"><img src="3.png" alt="XL Straight Pads ( soft & Comfortable )"></div>
+          <h3>Saheli Care XL Straight Pads ( soft & Comfortable )</h3>
+          <div class="price">₹250 / 1 pack<br>( 7 peace pads) <br></div>
           <p style="color:var(--muted)">Comfort fit for daily use, thin and absorbent.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Day Pads — Regular','₹80','product 22.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Day Pads — Regular" data-price="₹80">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XL Straight Pads ( soft & Comfortable )','₹250','3.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XL Straight Pads ( soft & Comfortable )" data-price="₹250">Order via WhatsApp</button>
           </div>
         </article>
 
         <article class="card">
-          <div class="image-frame"><img src="product33.png" alt="Night Pads"></div>
-          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
-          <div class="price">₹59 / 1 Pack <br>(7 peace pads) <br></div>
+          <div class="image-frame"><img src="Buy 1 get 1 free.png" alt="XXL Jumbo Pack ( buy 1 get 1 free ) "></div>
+          <h3>Saheli Care XXL Jumbo Pack ( buy 1 get 1 free )(Soft & Comfortable)</h3>
+          <div class="price">₹399  <br>(42 + 42 = 84 pads) <br></div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹59','product33.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹59">Order via WhatsApp</button>
+            <button class="btn btn-outline" onclick="openModal('XXL Jumbo Pack ( buy 1 get 1 free )','₹399','Buy 1 get 1 free.png')">Quick view</button>
+            <button class="wa-btn order-btn shine" data-product="XXL Jumbo Pack ( buy 1 get 1 free )" data-price="₹399">Order via WhatsApp</button>
           </div>
         </article>
 
@@ -747,4 +747,5 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
