--- a/index.html
+++ b/index.html
@@ -353,73 +353,15 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
         </article>
 
         <article class="card">
-          <div class="image-frame"><img src="Buy 1 get 1 free.png" alt="XXL Jumbo Pack ( buy 1 get 1 free ) "></div>
+          <div class="image-frame"><img src="Buy 1 Get 1 Free.png" alt="XXL Jumbo Pack ( buy 1 get 1 free ) "></div>
           <h3>Saheli Care XXL Jumbo Pack ( buy 1 get 1 free )(Soft & Comfortable)</h3>
           <div class="price">₹399  <br>(42 + 42 = 84 pads) <br></div>
           <p style="color:var(--muted)">Overnight protection with full coverage.</p>
           <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('XXL Jumbo Pack ( buy 1 get 1 free )','₹399','Buy 1 get 1 free.png')">Quick view</button>
+            <button class="btn btn-outline" onclick="openModal('XXL Jumbo Pack ( buy 1 get 1 free )','₹399','Buy 1 Get 1 Free.png')">Quick view</button>
             <button class="wa-btn order-btn shine" data-product="XXL Jumbo Pack ( buy 1 get 1 free )" data-price="₹399">Order via WhatsApp</button>
           </div>
         </article>
-
-        <article class="card">
-          <div class="image-frame"><img src="product44.png" alt="Organic Pads"></div>
-          <h3>Saheli Care Magic Gel Pads </h3>
-          <div class="price">₹75/ 1 Pack ( 7 peace)</div>
-          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
-          <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹75','product44.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹75">Order via WhatsApp</button>
-          </div>
-        </article>
-      </div>
-      <article class="card">
-          <div class="image-frame"><img src="produc66.png" alt="Organic Pads"></div>
-          <h3>Saheli Care sanitary pads(Protection - Infection & Itching)</h3>
-          <div class="price">₹55/ 1 Pack ( 7 Peace)</div>
-          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
-          <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹55','produc66.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹55">Order via WhatsApp</button>
-          </div>
-        </article>
-      </div>
-        <br>
-       <article class="card">
-          <div class="image-frame"><img src="pro11.png" alt="Night Pads"></div>
-          <h3>Saheli Care XL Pads (Soft & Comfortable)</h3>
-          <div class="price">₹85 / (buy 1 Packet Get 1 Packet free)  <br>(Per Packet 7 peace pads) <br></div>
-          <p style="color:var(--muted)">Overnight protection with full coverage.</p>
-          <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Night Pads — Extra Length','₹85','pro11.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Night Pads — Extra Length" data-price="₹85">Order via WhatsApp</button>
-          </div>
-        </article>
-          <br>
-        <article class="card">
-          <div class="image-frame"><img src="Buy 1 Get 1 Free.png" alt="Organic Pads"></div>
-          <h3>Saheli Care Magic Gel Pads </h3>
-          <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
-          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
-          <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','Buy 1 Get 1 Free.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
-          </div>
-        </article>
-       <br>
-
-      <article class="card">
-          <div class="image-frame"><img src="Buy 1 Get 1 Free 2.png" alt="Organic Pads"></div>
-          <h3>Saheli Care Magic Gel sanitary pads <br>(Protection - Infection & Itching)</h3>
-          <div class="price">₹120/ (buy 1 Packet Get 1 Packet free)</div>
-          <p style="color:var(--muted)">Made with organic cotton for sensitive skin (Soft & Comfortable).</p>
-          <div class="actions">
-            <button class="btn btn-outline" onclick="openModal('Organic Pads — Sensitive Skin','₹120','Buy 1 Get 1 Free 2.png')">Quick view</button>
-            <button class="wa-btn order-btn shine" data-product="Organic Pads — Sensitive Skin" data-price="₹120">Order via WhatsApp</button>
-          </div>
-        </article>
-      </div>
       <!-- Offer -->
       <div style="margin:12px 0;">
         <div class="diwali-card">
@@ -747,5 +689,6 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
