--- a/index.html
+++ b/index.html
@@ -244,7 +244,38 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   .footer-social { gap: 14px; }
   .social-icon { width: 38px; height: 38px; font-size: 18px; }
 }
+-------------------------------------------------------
+    /* ==== Mobile: product image full-bleed (no side gap) ==== */
+@media (max-width: 640px) {
+  /* Card ke andar ka default padding rehne do,
+     image-frame ko us padding se bahar laa rahe hain */
+  .card { padding: 10px; }
 
+  .card .image-frame{
+    /* image-frame ka internal spacing aur fixed height hatao */
+    padding: 0;
+    height: auto;
+    background: transparent;
+
+    /* full-bleed: card ke padding ko negate karo */
+    margin-left: -10px;
+    margin-right: -10px;
+    width: calc(100% + 20px);
+
+    /* top corners rounded, neeche content ke sath mil jayega */
+    border-radius: 10px 10px 0 0;
+  }
+
+  .card .image-frame img{
+    display: block;
+    width: 100%;
+    height: auto;        /* fixed height nahi — image apni height le */
+    max-height: none;    /* koi limit nahi */
+    object-fit: cover;   /* clean edge-to-edge look */
+    border-radius: inherit;
+  }
+}
+--------------------------------------------------------------------------
   </style>
 </head>
 <body>
@@ -689,6 +720,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
 
