--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   }
 }
 --------------------------------------------------------------------------
+    @media (max-width: 640px){
+  .container{ padding-left: 8px; padding-right: 8px; }
+}
+
   </style>
 </head>
 <body>
@@ -720,6 +724,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
 
