--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
     border-radius: 0;
   }
 }
+@media (max-width: 640px){
+  .container{ padding-left: 8px; padding-right: 8px; }
+}
 
 
   </style>
@@ -718,6 +721,7 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
   </script>
 </body>
 </html>
+
 
 
 
