--- a/index.html
+++ b/index.html
@@ -322,6 +322,48 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
     padding: 10px 14px !important;
   }
 }
+---------------------------
+    /* ===== Reviews ===== */
+.review-card{
+  background:#fff; padding:12px; border-radius:12px;
+  box-shadow:0 8px 24px rgba(11,16,23,0.06); display:flex; gap:12px; flex-wrap:wrap
+}
+.stars-row{display:flex; gap:4px; align-items:center}
+.stars-row input{display:none}
+.stars-row label{
+  font-size:28px; line-height:1; cursor:pointer; color:#d1d5db;
+  transition:transform .12s ease, color .12s ease; user-select:none
+}
+.stars-row label:hover, .stars-row label:hover ~ label{ transform:scale(1.05) }
+.stars-row input:checked ~ label{ color:#d1d5db }           /* reset */
+.stars-row input#star1:checked ~ label[for="star1"],
+.stars-row input#star2:checked ~ label[for="star2"],
+.stars-row input#star3:checked ~ label[for="star3"],
+.stars-row input#star4:checked ~ label[for="star4"],
+.stars-row input#star5:checked ~ label[for="star5"]{ color:#ff6b9f }
+
+/* Simple trick: reverse order so fill from left to right */
+.stars-row{flex-direction: row-reverse}
+.stars-row label:hover,
+.stars-row label:hover ~ label,
+.stars-row input:checked ~ label{ color:#ff6b9f }
+
+.review-fields{display:flex; flex:1; gap:8px; flex-direction:column; min-width:240px}
+.review-fields input, .review-fields textarea{
+  padding:10px; border-radius:8px; border:1px solid #e8eef5; font-size:14px; width:100%
+}
+
+.reviews-list{display:flex; flex-direction:column; gap:10px; margin-top:12px}
+.review-item{
+  background:#fff; padding:12px; border-radius:12px;
+  box-shadow:0 8px 20px rgba(12,18,24,0.06)
+}
+.review-item .meta{display:flex; align-items:center; gap:8px; font-size:13px; color:#6b7280}
+.review-item .stars{font-size:16px; color:#ff6b9f}
+.review-item .msg{margin:6px 0 0; font-size:14px}
+@media (max-width:640px){
+  .review-card{padding:10px}
+}
 
 
   </style>
@@ -476,6 +518,34 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
           <textarea id="message" name="message" rows="4" style="width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #eef2f6;font-size:14px"></textarea>
           <button type="submit" class="btn" style="background:var(--accent);color:white;width:100%;padding:12px;border-radius:10px;font-size:15px">Send Order</button>
         </form>
+
+        <section id="reviews" class="container" style="margin-top:18px">
+  <h2 style="margin-bottom:8px; display:flex; align-items:center; gap:8px">
+    Customer Reviews
+    <span id="avgBadge" style="background:#ffe4ec;color:#b4235a;font-weight:700;padding:4px 8px;border-radius:999px;font-size:13px;display:none"></span>
+  </h2>
+
+  <!-- Review Form -->
+  <form id="reviewForm" class="review-card" aria-label="Write a review">
+    <div class="stars-row" role="radiogroup" aria-label="Rate">
+      <input type="radio" name="rating" id="star5" value="5"><label for="star5" title="5 stars">★</label>
+      <input type="radio" name="rating" id="star4" value="4"><label for="star4" title="4 stars">★</label>
+      <input type="radio" name="rating" id="star3" value="3"><label for="star3" title="3 stars">★</label>
+      <input type="radio" name="rating" id="star2" value="2"><label for="star2" title="2 stars">★</label>
+      <input type="radio" name="rating" id="star1" value="1"><label for="star1" title="1 star">★</label>
+    </div>
+
+    <div class="review-fields">
+      <input id="revName" type="text" placeholder="Your name (optional)">
+      <textarea id="revMsg" rows="3" placeholder="Write your review..." required></textarea>
+      <button type="submit" class="wa-btn" style="align-self:flex-start">Submit Review</button>
+    </div>
+  </form>
+
+  <!-- List -->
+  <div id="reviewsList" class="reviews-list" aria-live="polite"></div>
+</section>
+
 
         <div style="flex:1;min-width:220px">
           <div style="background:white;padding:12px;border-radius:12px;box-shadow:0 8px 24px rgba(11,16,23,0.04)">
@@ -765,9 +835,93 @@ a:focus, button:focus{outline:3px solid rgba(255,107,159,0.18);outline-offset:2p
       images[current].classList.add("active");
     }
     setInterval(showNextImage, 4000);
+    ---
+      <script>
+(function(){
+  const LS_KEY = 'saheliReviews_v1';
+  const form = document.getElementById('reviewForm');
+  const listEl = document.getElementById('reviewsList');
+  const avgBadge = document.getElementById('avgBadge');
+
+  // Load existing (local)
+  let reviews = [];
+  try{
+    reviews = JSON.parse(localStorage.getItem(LS_KEY) || '[]');
+  }catch(e){ reviews = []; }
+
+  // Helpers
+  const clamp = n => Math.max(1, Math.min(5, n|0));
+  const escapeHTML = s => (s||'').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+
+  function starHTML(n){
+    const full = '★'.repeat(n);
+    const empty = '☆'.repeat(5-n);
+    return `<span class="stars" aria-label="${n} out of 5">${full}${empty}</span>`;
+  }
+
+  function render(){
+    // average
+    if(reviews.length){
+      const avg = (reviews.reduce((a,r)=>a+r.rating,0)/reviews.length);
+      avgBadge.style.display='inline-block';
+      avgBadge.textContent = `⭐ ${avg.toFixed(1)} (${reviews.length})`;
+    }else{
+      avgBadge.style.display='none';
+    }
+    // list
+    listEl.innerHTML = reviews.map(r => `
+      <div class="review-item">
+        <div class="meta">
+          ${starHTML(r.rating)}
+          <span>•</span>
+          <strong>${escapeHTML(r.name || 'Anonymous')}</strong>
+          <span>• ${new Date(r.date).toLocaleDateString()}</span>
+        </div>
+        <p class="msg">${escapeHTML(r.msg)}</p>
+      </div>
+    `).join('') || `<div class="review-item"><p class="msg" style="margin:0">Be the first to review!</p></div>`;
+  }
+
+  // Get selected rating from the five radios
+  function getRatingFromRadios(){
+    const nodes = ['star5','star4','star3','star2','star1'].map(id=>document.getElementById(id));
+    const checked = nodes.find(n => n.checked);
+    if(checked) return clamp(parseInt(checked.value,10));
+    return 0;
+  }
+
+  // Submit
+  form.addEventListener('submit', function(e){
+    e.preventDefault();
+    const rating = getRatingFromRadios();
+    const msg = document.getElementById('revMsg').value.trim();
+    const name = document.getElementById('revName').value.trim();
+
+    if(!rating){ alert('Please select stars.'); return; }
+    if(!msg){ alert('Please write a short review.'); return; }
+
+    const review = {
+      rating,
+      msg: msg.slice(0, 800),
+      name: name.slice(0, 60),
+      date: Date.now()
+    };
+    reviews.unshift(review);
+    localStorage.setItem(LS_KEY, JSON.stringify(reviews));
+    form.reset();
+    // also clear selected stars
+    ['star1','star2','star3','star4','star5'].forEach(id => { const n=document.getElementById(id); if(n) n.checked=false; });
+    render();
+  });
+
+  render();
+})();
+</script>
+------------------
   </script>
 </body>
 </html>
+
 
 
 
